<resources>
    <string name="app_name">DogWatchr</string>

    <!-- Settings strings -->
    <string name="settings">Settings</string>
    <string name="add_collar">Add Collar</string>
    <string name="delete_collar">Delete Collar</string>
    <string name="remove_safezone">Remove Safe Zone</string>
    <string name="logout">Log Out</string>
    <string name="collar_wifi">Wi-Fi for Dog Collar</string>
    <string name="setup_wifi">Setup Wi-Fi</string>

    <!-- Wifi strings -->
    <string name="wifi_connected">Connected</string>
    <string name="signal_strength">Wi-Fi Signal Strength</string>
    <string name="show_pass">Show Password</string>

    <!-- Main screen strings -->
    <string name="led">Collar Light</string>
    <string name="add_sz">Add safe zone</string>
    <string name="found_dog">Stop notifications</string>

    <string-array name="notif_time_choices">
        <item>every 30 seconds</item>
        <item>every minute</item>
        <item>every 2 minutes</item>
        <item>every 5 minutes</item>
        <item>every 10 minutes</item>
    </string-array>

    <string name="safe_zone_rad">Radius (in meters)</string>
    <string name="collar_id">Collar ID</string>
    <string name="collar_name">Dog\'s Name</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="remember">Remember Me</string>

    <string name="prefs_name">DogWatchrPrefs</string>

    <string name="enter_id">Please enter the collar ID</string>
    <string name="enter_name">Please enter your dog\'s name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
