<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="seniordesign.lostdogcollar.MainActivity">

    <item
        android:id="@+id/refresh_map"
        android:orderInCategory="100"
        android:title="Refresh Map"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"/>

    <item
        android:id="@+id/post_to_fb"
        android:orderInCategory="100"
        android:title="Share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always"/>

    <item
        android:id="@+id/app_add_collar"
        android:orderInCategory="100"
        android:title="@string/add_collar"
        app:showAsAction="never"/>

    <item
        android:id="@+id/app_delete_collar"
        android:orderInCategory="100"
        android:title="@string/delete_collar"
        app:showAsAction="never"/>

    <item
        android:id="@+id/app_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/app_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never"/>
</menu>