<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="seniordesign.lostdogcollar.fragments.LoginFragment">

    <LinearLayout
        android:id="@+id/app_picture"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:background="#3F51B5">
        
        <ImageView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:contentDescription="dog collar icon"
            android:src="@drawable/ldcicon"/>

        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="35dp"/>
        
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/remember_layout"
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/remember_user_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"/>
    </LinearLayout>

    <Button
        android:id="@+id/signin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"/>

        <TextView
            android:id="@+id/create_acct_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Sign Up"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>
