<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true">

    <include layout="@layout/app_bar"
        android:id="@+id/app_bar"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/app_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/stop_notifs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/found_dog"
            android:elevation="2dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

        <Button
            android:id="@+id/add_sz_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_sz"
            android:elevation="2dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/led_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttons"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/led_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led"
            android:textSize="16sp"
            android:layout_centerVertical="true"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/led_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/led_text"
            android:layout_marginLeft="10dp"/>

    </RelativeLayout>

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/seekbar"
        android:layout_marginTop="10dp"/>

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/seekbar"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/led_layout"/>

</RelativeLayout>


